<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".inventory.IngredientDialog">

    <EditText
        android:id="@+id/etIngredientName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ingredient_name"
        android:autofillHints="@string/ingredient_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:inputType="text" />

    <EditText
        android:id="@+id/etIngredientAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/ingredient_amount"
        android:autofillHints="@string/ingredient_amount"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:inputType="numberDecimal"
        android:layout_below="@+id/etIngredientName" />

    <EditText
        android:id="@+id/etIngredientUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/ingredient_unit"
        android:autofillHints="@string/ingredient_unit"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:inputType="text"
        android:layout_below="@+id/etIngredientName"
        android:layout_toEndOf="@+id/etIngredientAmount"
        />


</RelativeLayout>