<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp" >

        <TextView
            android:id="@+id/tvIngredientName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ingredient_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@id/tvIngredientAmount"
            android:layout_marginEnd="4dp"/>

        <TextView
            android:id="@+id/tvIngredientAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ingredient_amount"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_toStartOf="@id/tvIngredientUnit"
            android:layout_marginEnd="4dp"/>

        <TextView
            android:id="@+id/tvIngredientUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ingredient_unit"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>